# Roboarm

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  events.py  main.py  models.py  schemas.py
backend/app/routers/: control.py  history.py  kinematics.py  presets.py
backend/app/services/: arm_state.py  kinematics.py  motion_engine.py
backend/tests/: test_control.py  test_kinematics.py
docs/demo/: README.md
frontend/: .env.local.example  Dockerfile  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ArmVisualizer.tsx  ConnectionStatus.tsx  EndEffectorDisplay.tsx  JointControls.tsx  MovementHistory.tsx  PresetPanel.tsx  TorqueGauges.tsx
frontend/lib/: api.ts  store.ts  ws.ts
frontend/types/: roboarm.d.ts
