[project]
name = "roboarm-backend"
version = "0.1.0"
description = "RoboArm — 6-DOF robotic arm real-time control backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "sqlmodel==0.0.18",
    "pydantic-settings==2.2.0",
    "python-dotenv==1.0.0",
    "websockets==12.0",
    "numpy==1.26.4",
    "pytest==8.2.0",
    "httpx==0.27.0",
    "pytest-asyncio==0.23.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
